kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fint-core-consumer-utdanning-ot
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "utdanning/ot/actuator/prometheus"
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: fint-core-consumer-utdanning-ot-kafka-certificates
      containers:
        - image: ghcr.io/fintlabs/fint-core-consumer-utdanning-ot:sha-0000000
          name: fint-core-consumer-utdanning-ot
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "1152Mi"
              cpu: "1"
            requests:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
